@@ -25,6 +25,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   field can be in any column.  If there is no source column, then df
   prints 'total' into the target column.
 
+  nl no longer supports the --page-increment option which was deprecated
+  since coreutils-7.5.  Use --line-increment instead.
+
 ** Build-related
 
   Perl is now more of a prerequisite.  It has long been required in order
